--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
   },
-  "main": "index.js",
+  "main": "build/index.js",
   "repository": "git@github.com:namrata-nag/shared-component-poc.git",
   "author": "Namrata Nag <namratanag12@gmail.com>",
   "license": "MIT",
